[package]
name = "tiny-chess"
version = "0.5.0"
edition = "2024"

[dependencies]
# Used by `engine`
num-traits = "0.2.19"

eframe = { version = "0.32.1", features = [
    "default",
    "__screenshot", # enables EFRAME_SCREENSHOT_TO support
] }

# Image support for drag-drop and loading (brings `image` transitively)
egui_extras = { version = "0.32.1", features = ["default", "image"] }

# Lightweight logging without default dependencies like regex
env_logger = { version = "0.11", default-features = false, features = [
    "auto-color",
    "humantime",
] }

[profile.dev]
opt-level = 3

[profile.release]
# Good default for GUIs: faster codegen + smaller binaries
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = "symbols"

[features]
salewskiChessDebug = []

